2018-01-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: fix queue handling

2018-01-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ampgsql.pl: s/xlog/wal/ in function name for version
	  10 and newer

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/success-dumper-taper-vault.pl: Merge error

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (server-src/driver.c): Remove function

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (tape_action): Improvement

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c (idle_taper): Check wtaper->vaultqs.vaultq.head

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set sent_first_write and last_started_wtaper

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Improve new_tape

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set TAPER_STATE_TAPE_STARTED on NEW-TAPE

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Send dump to first storage

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Status.pm: Add vaulting information
	* server-src/amstatus.pl: Print vaulting information
	* installcheck/success-dumper-taper.pl: Fix for vaulting information

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Keep track of all label in use

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set wtaper->current_source_label

2018-01-22  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: Set wtaper->current_dest_label

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Worker.pm: Set input_errors on Recovery error

2018-01-19  Jean-Louis Martineau <JMartineau@carbonite.com>